--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,8 @@
         </div>
     </div>
     <div class="flex justify-center max-[1040px]:flex-col max-[1040px]:items-center">
-        <div class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300" id="courseNumber">
+        <div class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300"
+            id="courseNumber">
             <a href="">
                 <div class="flex justify-center items-center my-8 p-5 bg-white">
                     <i class="bi bi-search-heart" style=" font-size: 40px;" id="icon1"></i>
@@ -34,7 +35,8 @@
                 </div>
             </a>
         </div>
-        <div class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
+        <div
+            class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
             <a href="">
                 <div class="flex justify-center items-center my-8 p-5 bg-white">
                     <i class="bi bi-dropbox" style=" font-size: 40px;"></i>
@@ -47,7 +49,8 @@
                 </div>
             </a>
         </div>
-        <div class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
+        <div
+            class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
             <a href="">
                 <div class="flex justify-center items-center my-8 p-5 bg-white">
                     <i class="bi bi-journal-check" style=" font-size: 40px;"></i>
@@ -61,9 +64,15 @@
             </a>
         </div>
     </div>
-    <div class="flex items-end justify-center min-[1px]:h-[calc(100vh_-_42.5rem)] min-[1040px]:h-[calc(100vh_-_35.5rem)] p-4 text-gray-400">
-        <span class="p-2"><i class="bi bi-battery-full text-green-500"></i> Power By <a href="https://github.com/ridemountainpig">ridemountainpig</a></span>
-        <a href="https://github.com/ridemountainpig/fcu-course-search" class="p-2 bg-white rounded-lg"><span><i class="bi bi-code"></i> github</span></a>
+    <div
+        class="flex items-end justify-center min-[1px]:h-[calc(100vh_-_38.5rem)] min-[1040px]:h-[calc(100vh_-_35.5rem)] p-4 text-gray-400">
+        <span class="p-2">
+            <a href="https://github.com/ridemountainpig">
+                <i class="bi bi-battery-full text-green-500"></i> Power By ridemountainpig
+            </a>
+        </span>
+        <a href="https://github.com/ridemountainpig/fcu-course-search" class="p-2 bg-white rounded-lg"><span><i
+                    class="bi bi-code"></i> github</span></a>
     </div>
 </body>
 
