feat : add new title and image

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,10 @@
 
 <body class="h-screen bg-slate-100">
     <div class="flex justify-center">
-        <div class="my-24">
-            <div class="flex justify-center">
-                <span class="font-bold tracking-wider text-4xl text-gray-600">FCU Course Search</span><br>
+        <div class="my-20">
+            <div class="flex justify-center items-center">
+                <img src="/static/images/FCU.png" alt="" class="hover:scale-75 duration-500" width="120px">
+                <span class="font-bold tracking-wider text-4xl text-gray-600 ml-4">Course Search</span><br>
             </div>
         </div>
     </div>
