feat : add title RWD 410px

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <div class="flex justify-center">
         <div class="my-20">
             <div class="flex justify-center items-center">
-                <img src="/static/images/FCU.png" alt="" class="hover:scale-75 duration-500" width="120px">
+                <img src="/static/images/FCU.png" alt="" class="hover:scale-75 duration-500 max-[410px]:ml-16" width="120px">
                 <span class="font-bold tracking-wider text-4xl text-gray-600 ml-4">Course Search</span><br>
             </div>
         </div>
