--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
         </div>
         <div
             class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
-            <a href="">
+            <a href="/followcourse">
                 <div class="flex justify-center items-center my-8 p-5 bg-white">
                     <i class="bi bi-journal-check" style=" font-size: 40px;"></i>
                 </div>
