edit title place

--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -25,12 +25,10 @@
 
 <body class="h-[calc(100vh_-_20rem) bg-slate-100">
     <div class="flex max-[1200px]:justify-center min-[1200px]:ml-24 mt-20 my-5">
-        <div class="flex justify-start w-2/3 max-[1200px]:ml-4">
-            <div class="pb-10">
-                <div class="font-bold text-4xl text-gray-600">Follow Course</div>
-                <div class="font-medium text-lg text-gray-400 mt-6 px-1 border-b-4 border-gray-400"
-                    style="width: 120px; letter-spacing: 10px;">關注課程</div>
-            </div>
+        <div class="pb-10">
+            <div class="font-bold text-4xl text-gray-600">Follow Course</div>
+            <div class="font-medium text-lg text-gray-400 mt-6 px-1 border-b-4 border-gray-400"
+                style="width: 120px; letter-spacing: 10px;">關注課程</div>
         </div>
     </div>
     <div class="flex max-[1200px]:flex-col">
@@ -38,7 +36,7 @@
             <div id="courseList"
                 class="courseList ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-[calc(100vh_-_18rem)] overflow-auto w-96 min-[1200px]:w-11/12 my-5 min-[1200px]:mt-0"
                 style="background-color: #dfe7d5;">
-                
+
             </div>
         </div>
         <div class="max-[1200px]:order-first order-none">
@@ -53,7 +51,8 @@
                     </div>
                 </div>
                 <div class="ml-8 min-[1200px]:mr-24 mr-10 rounded-xl bg-slate-200 w-44 h-44">
-                    <div id="followNumber" class="flex justify-center items-center h-full font-black text-6xl text-gray-500 p-4"></div>
+                    <div id="followNumber"
+                        class="flex justify-center items-center h-full font-black text-6xl text-gray-500 p-4"></div>
                 </div>
             </div>
             <div class="flex justify-center">
