--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -34,7 +34,7 @@
     <div class="flex max-[1200px]:flex-col">
         <div class="flex min-[1200px]:flex-auto justify-center">
             <div id="courseList"
-                class="courseList ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-[calc(100vh_-_18rem)] overflow-auto w-96 min-[1200px]:w-11/12 my-5 min-[1200px]:mt-0"
+                class="courseList ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-[calc(100vh_-_17rem)] overflow-auto w-96 min-[1200px]:w-11/12 my-5 min-[1200px]:mt-0"
                 style="background-color: #dfe7d5;">
 
             </div>
@@ -70,12 +70,16 @@
                     </div>
                     <div class="flex justify-center">
                         <button
-                            class="text-gray-600 bg-sky-200 font-medium rounded-lg text-lg hover:scale-75 duration-500 p-4">關注課程</button>
+                            class="text-gray-600 bg-sky-200 font-medium rounded-lg text-lg hover:scale-75 duration-500 p-4" onclick="addFollowCourse()">關注課程</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="/static/script/followCourse.js"></script>
+    <script>
+        generateCourseList();
+    </script>
 </body>
 
 </html>
