feat: add new route path

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,14 +24,14 @@
     <div class="flex justify-center max-[1040px]:flex-col max-[1040px]:items-center">
         <div class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300"
             id="courseNumber">
-            <a href="">
+            <a href="/searchcourse">
                 <div class="flex justify-center items-center my-8 p-5 bg-white">
                     <i class="bi bi-search-heart" style=" font-size: 40px;" id="icon1"></i>
                 </div>
                 <div class="flex justify-center">
                     <div class="pb-10">
                         <span class="font-bold text-2xl text-gray-600">Course Number</span><br>
-                        <span class="font-medium text-sm text-gray-400">選課代號</span>
+                        <span class="font-medium text-sm text-gray-400">課程號碼</span>
                     </div>
                 </div>
             </a>
@@ -73,7 +73,7 @@
             </a>
         </span>
         <a href="https://github.com/ridemountainpig/fcu-course-search" class="p-2 bg-white rounded-lg"><span><i
-                    class="bi bi-code"></i> github</span></a>
+                    class="bi bi-code"></i> Github</span></a>
     </div>
 </body>
 
