fix: change input type to number

--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -63,14 +63,14 @@
                             <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
                                 <i class="bi bi-plus-circle text-gray-400" style="font-size: 20px;"></i>
                             </div>
-                            <input type="text" id="courseInput"
+                            <input type="number" id="courseInput"
                                 class="block w-full p-4 pl-10 text-base text-gray-400 font-bold rounded-lg bg-slate-100"
                                 placeholder="Course Number">
                         </div>
                     </div>
                     <div class="flex justify-center">
                         <button
-                            class="text-gray-600 bg-sky-200 font-medium rounded-lg text-lg hover:scale-75 duration-500 p-4" onclick="addFollowCourse()">關注課程</button>
+                            class="text-gray-400 bg-sky-200 font-medium rounded-lg text-lg hover:scale-75 duration-500 p-4" onclick="addFollowCourse()">關注課程</button>
                     </div>
                 </div>
             </div>
