--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -24,8 +24,8 @@
     <div class="flex justify-center items-center h-[calc(100vh_-_18rem)] w-full">
         <div id="searchBox" class="rounded-2xl opacity-70 -skew-x-[25deg] duration-700 w-4/6 h-5/6 shadow-2xl"
             style="background-color: #dfe7d5;">
-            <div class="flex items-center">
-                <div id="searchInput" class="skew-x-[25deg] w-full my-40">
+            <div class="flex items-center h-5/6">
+                <div id="searchInput" class="skew-x-[25deg] w-full">
                     <div class="flex justify-center">
                         <div class="font-medium text-lg text-gray-400 py-2">請輸入課程號碼</div>
                     </div>
