--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -27,14 +27,14 @@
             <div class="flex items-center h-5/6">
                 <div id="searchInput" class="skew-x-[25deg] w-full">
                     <div class="flex justify-center">
-                        <div class="font-medium text-lg text-gray-400 py-2">請輸入課程號碼</div>
+                        <div class="font-medium text-xl text-gray-400 py-2">請輸入課程號碼</div>
                     </div>
                     <div class="flex justify-center">
                         <input type="number" id="courseInput"
-                            class="block w-3/6 p-4 pl-10 text-base text-gray-400 font-bold rounded-tl-lg rounded-bl-lg bg-slate-100 shadow-xl"
+                            class="block w-3/6 p-4 pl-10 text-base text-gray-400 font-bold rounded-tl-lg rounded-bl-lg bg-slate-100 border-t-8 border-b-8 border-l-8 border-white z-10"
                             placeholder="Course Number">
                         <button
-                            class="text-gray-400 bg-orange-100 font-medium rounded-tr-lg rounded-br-lg text-lg p-4 shadow-xl"
+                            class="text-gray-400 bg-orange-100 font-medium rounded-tr-lg rounded-br-lg text-lg p-4 border-t-8 border-b-8 border-r-8 border-white"
                             onclick="searchCourse()">查詢課程</button>
                     </div>
                 </div>
