feat: add course list area and edit skew deg

--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -22,10 +22,10 @@
     </div>
 
     <div class="flex justify-center items-center h-[calc(100vh_-_18rem)] w-full">
-        <div id="searchBox" class="rounded-2xl opacity-70 -skew-x-[25deg] duration-700 w-4/6 h-5/6 shadow-2xl"
+        <div id="searchBox" class="rounded-2xl opacity-70 -skew-x-[10deg] duration-700 w-4/6 h-5/6 shadow-2xl"
             style="background-color: #dfe7d5;">
-            <div class="flex items-center h-5/6">
-                <div id="searchInput" class="skew-x-[25deg] w-full">
+            <div id="searchInput" class="flex items-center h-5/6">
+                <div class="skew-x-[10deg] w-full">
                     <div class="flex justify-center">
                         <div class="font-medium text-xl text-gray-400 py-2">請輸入課程號碼</div>
                     </div>
@@ -39,6 +39,7 @@
                     </div>
                 </div>
             </div>
+            <div id="courseList" class="h-full flex justify-center items-center"></div>
         </div>
     </div>
     <script src="../static/script/searchCourse.js"></script>
