fix: let function list component items center
also fix RWD bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,67 +13,69 @@
 </head>
 
 <body class="h-screen bg-slate-100">
-    <div class="flex justify-center">
-        <div class="my-20">
-            <div class="flex justify-center items-center">
-                <img src="/static/images/FCU.png" alt="" class="hover:scale-75 duration-500 max-[410px]:ml-16" width="120px">
-                <span class="font-bold tracking-wider text-4xl text-gray-600 ml-4">Course Search</span><br>
+    <div class="h-1/6 flex justify-center items-center">
+        <div class="flex justify-center items-center">
+            <img src="/static/images/FCU.png" alt="" class="hover:scale-75 duration-500 max-[410px]:ml-16" width="120px">
+            <span class="font-bold tracking-wider text-4xl text-gray-600 ml-4">Course Search</span><br>
+        </div>
+    </div>
+    <div class="min-[1100px]:h-4/6 flex justify-center items-center">
+        <div class="flex justify-center max-[1100px]:flex-col items-center">
+            <div class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300"
+                id="courseNumber">
+                <a href="/searchcourse">
+                    <div class="flex justify-center items-center my-8 p-5 bg-white">
+                        <i class="bi bi-search-heart" style=" font-size: 40px;" id="icon1"></i>
+                    </div>
+                    <div class="flex justify-center">
+                        <div class="pb-10">
+                            <span class="font-bold text-2xl text-gray-600">Course Number</span><br>
+                            <span class="font-medium text-sm text-gray-400">課程號碼</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div
+                class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
+                <a href="/generalstudies">
+                    <div class="flex justify-center items-center my-8 p-5 bg-white">
+                        <i class="bi bi-boxes" style=" font-size: 40px;"></i>
+                    </div>
+                    <div class="flex justify-center">
+                        <div class="pb-10">
+                            <span class="font-bold text-2xl text-gray-600">General Studies</span><br>
+                            <span class="font-medium text-sm text-gray-400">通識課程</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div
+                class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
+                <a href="/followcourse">
+                    <div class="flex justify-center items-center my-8 p-5 bg-white">
+                        <i class="bi bi-journal-check" style=" font-size: 40px;"></i>
+                    </div>
+                    <div class="flex justify-center">
+                        <div class="pb-10">
+                            <span class="font-bold text-2xl text-gray-600">Follow Courses</span><br>
+                            <span class="font-medium text-sm text-gray-400">關注課程</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
-    <div class="flex justify-center max-[1040px]:flex-col max-[1040px]:items-center">
-        <div class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300"
-            id="courseNumber">
-            <a href="/searchcourse">
-                <div class="flex justify-center items-center my-8 p-5 bg-white">
-                    <i class="bi bi-search-heart" style=" font-size: 40px;" id="icon1"></i>
-                </div>
-                <div class="flex justify-center">
-                    <div class="pb-10">
-                        <span class="font-bold text-2xl text-gray-600">Course Number</span><br>
-                        <span class="font-medium text-sm text-gray-400">課程號碼</span>
-                    </div>
-                </div>
-            </a>
-        </div>
+    <div class="h-1/6 flex justify-center items-end">
         <div
-            class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
-            <a href="/generalstudies">
-                <div class="flex justify-center items-center my-8 p-5 bg-white">
-                    <i class="bi bi-boxes" style=" font-size: 40px;"></i>
-                </div>
-                <div class="flex justify-center">
-                    <div class="pb-10">
-                        <span class="font-bold text-2xl text-gray-600">General Studies</span><br>
-                        <span class="font-medium text-sm text-gray-400">通識課程</span>
-                    </div>
-                </div>
-            </a>
+            class="flex items-end justify-center p-4 text-gray-400">
+            <span class="p-2">
+                <a href="https://github.com/ridemountainpig">
+                    <i class="bi bi-battery-full text-green-500"></i> Power By ridemountainpig
+                </a>
+            </span>
+            <a href="https://github.com/ridemountainpig/fcu-course-search" class="p-2 bg-white rounded-lg"><span><i
+                        class="bi bi-code"></i> Github</span></a>
         </div>
-        <div
-            class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
-            <a href="/followcourse">
-                <div class="flex justify-center items-center my-8 p-5 bg-white">
-                    <i class="bi bi-journal-check" style=" font-size: 40px;"></i>
-                </div>
-                <div class="flex justify-center">
-                    <div class="pb-10">
-                        <span class="font-bold text-2xl text-gray-600">Follow Courses</span><br>
-                        <span class="font-medium text-sm text-gray-400">關注課程</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div
-        class="flex items-end justify-center min-[1px]:h-[calc(100vh_-_38.5rem)] min-[1040px]:h-[calc(100vh_-_35.5rem)] p-4 text-gray-400">
-        <span class="p-2">
-            <a href="https://github.com/ridemountainpig">
-                <i class="bi bi-battery-full text-green-500"></i> Power By ridemountainpig
-            </a>
-        </span>
-        <a href="https://github.com/ridemountainpig/fcu-course-search" class="p-2 bg-white rounded-lg"><span><i
-                    class="bi bi-code"></i> Github</span></a>
     </div>
 </body>
 
