update: edit component layout

--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -23,18 +23,18 @@
     </style>
 </head>
 
-<body class="h-[calc(100vh_-_20rem) bg-slate-100">
-    <div class="flex max-[1200px]:justify-center min-[1200px]:ml-24 mt-20 my-5">
-        <div class="pb-10">
+<body class="h-screen bg-slate-100">
+    <div class="flex items-center max-[1200px]:justify-center min-[1200px]:ml-24 h-1/4">
+        <div class="w-96">
             <div class="font-bold text-4xl text-gray-600">Follow Course</div>
             <div class="font-medium text-lg text-gray-400 mt-6 px-1 border-b-4 border-gray-400"
                 style="width: 122px; letter-spacing: 10px;">關注課程</div>
         </div>
     </div>
-    <div class="flex max-[1200px]:flex-col">
+    <div class="flex max-[1200px]:flex-col h-3/4">
         <div class="flex min-[1200px]:flex-auto justify-center">
             <div id="courseList"
-                class="courseList ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-[calc(100vh_-_17rem)] overflow-auto w-96 min-[1200px]:w-11/12 my-5 min-[1200px]:mt-0"
+                class="courseList ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-[calc(100vh_-_19rem)] overflow-auto w-96 min-[1200px]:w-11/12 my-5 min-[1200px]:mt-0"
                 style="background-color: #dfe7d5;">
 
             </div>
