--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -23,16 +23,18 @@
     </style>
 </head>
 
-<body class="h-[calc(100vh_-_20rem) bg-slate-100">
-    <div class="flex max-[520px]:ml-8 min-[520px]:ml-24 mt-20 my-5">
-        <div class="pb-10">
+<body class="h-screen bg-slate-100">
+    <div class="flex items-center max-[520px]:ml-8 min-[520px]:ml-24 h-1/4">
+        <div>
             <div class="font-bold text-4xl text-gray-600">General Studies</div>
             <div class="font-medium text-lg text-gray-400 mt-6 px-1 border-b-4 border-gray-400"
                 style="width: 122px; letter-spacing: 10px;">通識課程</div>
         </div>
     </div>
-    <div id="courseList" class="courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh_-_18rem)] overflow-auto"
-        style="background-color: #dfe7d5;">
+    <div class="h-3/4">
+        <div id="courseList" class="courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh_-_19rem)] overflow-auto"
+            style="background-color: #dfe7d5;">
+        </div>
     </div>
     <script src="/static/script/generalStudies.js"></script>
     <script>
