update: edit component layout

--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="h-screen bg-slate-100">
-    <div class="flex items-center max-[1200px]:justify-center min-[1200px]:ml-24 h-1/4">
+    <div class="flex items-center max-[1200px]:justify-center min-[1200px]:ml-24 max-[465px]:ml-10 h-1/4">
         <div class="w-96">
             <div class="font-bold text-4xl text-gray-600">Follow Course</div>
             <div class="font-medium text-lg text-gray-400 mt-6 px-1 border-b-4 border-gray-400"
