--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -36,11 +36,11 @@
             <div class="ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-[calc(100vh_-_19rem)] w-96 min-[1200px]:w-11/12 my-5 min-[1200px]:mt-0"
                 style="background-color: #dfe7d5;">
                 <div class="z-20 w-full h-full flex justify-center items-center">
-                    <div id="coffeeIcon" class="z-30 w-20 h-20 flex justify-center items-center rounded-full animate-bounce invisible" style="background-color: #E3CAA5;">
+                    <div id="coffeeIcon" class="z-30 w-20 h-20 flex justify-center items-center rounded-full animate-bounce" style="background-color: #E3CAA5;">
                         <i class="bi bi-cup-hot text-white" style="font-size: 50px;"></i>
                     </div>
                 </div>
-                <div id="coffeeBackground" class="z-10 rounded-xl bg-black opacity-30 w-full h-[calc(100vh_-_20.5rem)] -mt-[calc(100vh_-_21rem)] invisible"></div>
+                <div id="coffeeBackground" class="z-10 rounded-xl bg-black opacity-30 w-full h-[calc(100vh_-_20.5rem)] -mt-[calc(100vh_-_21rem)]"></div>
                 <div id="courseList" class="courseList rounded-xl z-0 -mt-[calc(100vh_-_20rem)] h-[calc(100vh_-_20rem)]"></div>
             </div>
         </div>
