update: remove button hover scale animation

--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -75,7 +75,7 @@
                     </div>
                     <div class="flex justify-center">
                         <button
-                            class="text-gray-400 bg-sky-200 font-medium rounded-lg text-lg hover:scale-75 duration-500 p-4"
+                            class="text-gray-400 bg-sky-200 font-medium rounded-lg text-lg p-4"
                             onclick="addFollowCourse()">關注課程</button>
                     </div>
                 </div>
