feat: add return front page button

--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -26,13 +26,24 @@
 <body class="h-screen bg-slate-100">
     <div class="flex items-center max-[520px]:ml-8 min-[520px]:ml-24 h-1/4">
         <div>
-            <div class="font-bold text-4xl text-gray-600">General Studies</div>
+            <div class="cursor-pointer min-[931px]:hidden">
+                <i class="bi bi-arrow-left-square text-gray-400 font-bold" style="font-size: 30px;"
+                    onclick="history.back()"></i>
+            </div>
+            <div class="flex font-bold text-4xl text-gray-600">
+                <div class="cursor-pointer max-[930px]:hidden">
+                    <i class="bi bi-arrow-left-square text-gray-400 font-bold pr-2" style="font-size: 30px;"
+                        onclick="history.back()"></i>
+                </div>
+                General Studies
+            </div>
             <div class="font-medium text-lg text-gray-400 mt-6 px-1 border-b-4 border-gray-400"
                 style="width: 122px; letter-spacing: 10px;">通識課程</div>
         </div>
     </div>
     <div class="h-3/4">
-        <div id="courseList" class="courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh_-_19rem)] overflow-auto"
+        <div id="courseList"
+            class="courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh_-_19rem)] overflow-auto"
             style="background-color: #dfe7d5;">
         </div>
     </div>
