feat: change bottom icon and text

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,8 +73,12 @@
                     <i class="bi bi-battery-full text-green-500"></i> Power By ridemountainpig
                 </a>
             </span>
-            <a href="https://github.com/ridemountainpig/fcu-course-search" class="p-2 bg-white rounded-lg"><span><i
-                        class="bi bi-code"></i> Github</span></a>
+            <a href="https://github.com/ridemountainpig/fcu-course-search" class="p-2 bg-white rounded-lg">
+                <span>
+                    <i class="bi bi-github"></i>
+                    Star Project
+                </span>
+            </a>
         </div>
     </div>
 </body>
