--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-22QRKM1PH4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-22QRKM1PH4');
+    </script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +25,8 @@
 <body class="h-screen bg-slate-100">
     <div class="h-1/6 flex justify-center items-center">
         <div class="flex justify-center items-center">
-            <img src="/static/images/FCU.png" alt="" class="hover:scale-75 duration-500 max-[410px]:ml-16" width="120px">
+            <img src="/static/images/FCU.png" alt="" class="hover:scale-75 duration-500 max-[410px]:ml-16"
+                width="120px">
             <span class="font-bold tracking-wider text-4xl text-gray-600 ml-4">Course Search</span><br>
         </div>
     </div>
@@ -66,8 +77,7 @@
         </div>
     </div>
     <div class="h-1/6 flex justify-center items-end">
-        <div
-            class="flex items-end justify-center p-4 text-gray-400">
+        <div class="flex items-end justify-center p-4 text-gray-400">
             <span class="p-2">
                 <a href="https://github.com/ridemountainpig">
                     <i class="bi bi-battery-full text-green-500"></i> Power By ridemountainpig
