feat: increase size of page link area

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,9 @@
     </div>
     <div class="min-[1100px]:h-4/6 flex justify-center items-center">
         <div class="flex justify-center max-[1100px]:flex-col items-center">
-            <div class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300"
-                id="courseNumber">
-                <a href="/searchcourse">
+            <a href="/searchcourse" class="mx-8 my-4">
+                <div class="pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300"
+                    id="courseNumber">
                     <div class="flex justify-center items-center my-8 p-5 bg-white">
                         <i class="bi bi-search-heart" style=" font-size: 40px;" id="icon1"></i>
                     </div>
@@ -44,11 +44,11 @@
                             <span class="font-medium text-sm text-gray-400">課程號碼</span>
                         </div>
                     </div>
-                </a>
-            </div>
-            <div
-                class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
-                <a href="/generalstudies">
+                </div>
+            </a>
+            <a href="/generalstudies" class="mx-8 my-4">
+                <div
+                    class="pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
                     <div class="flex justify-center items-center my-8 p-5 bg-white">
                         <i class="bi bi-boxes" style=" font-size: 40px;"></i>
                     </div>
@@ -58,11 +58,11 @@
                             <span class="font-medium text-sm text-gray-400">通識課程</span>
                         </div>
                     </div>
-                </a>
-            </div>
-            <div
-                class="mx-8 my-4 pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
-                <a href="/followcourse">
+                </div>
+            </a>
+            <a href="/followcourse" class="mx-8 my-4">
+                <div
+                    class="pt-10 w-80 bg-slate-200 rounded-lg drop-shadow-lg cursor-pointer hover:bg-lime-50 hover:-translate-y-1 hover:scale-110 duration-300">
                     <div class="flex justify-center items-center my-8 p-5 bg-white">
                         <i class="bi bi-journal-check" style=" font-size: 40px;"></i>
                     </div>
@@ -72,8 +72,8 @@
                             <span class="font-medium text-sm text-gray-400">關注課程</span>
                         </div>
                     </div>
-                </a>
-            </div>
+                </div>
+            </a>
         </div>
     </div>
     <div class="h-1/6 flex justify-center items-end">
