fix: safari RWD height bug

--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -53,7 +53,7 @@
     </div>
     <div class="h-3/4">
         <div id="courseList"
-            class="courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh_-_19rem)] overflow-auto"
+            class="courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh*0.75_-_2rem)] overflow-auto"
             style="background-color: #dfe7d5;">
         </div>
     </div>
