--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="flex justify-center items-start h-3/4 w-full">
-        <div id="searchBox" class="rounded-2xl opacity-70 min-[600px]:w-4/6 h-5/6 shadow-2xl"
+        <div id="searchBox" class="rounded-2xl opacity-70 min-[600px]:w-4/6 h-[calc(100vh*0.75_-_2rem)]"
             style="background-color: #dfe7d5;">
             <div id="searchInput" class="flex items-center h-5/6">
                 <div class="w-full">
